fix printing on mobile

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -54,9 +54,3 @@ body {
   }
 }
 
-.visible-print {
-    display: none !important;
-    @media print {
-        display: block !important;
-    }
-}
